[package]
name = "mytheme"
version = "0.0.2"
description = "Mytheme PRQL Query Compiler"
license = "MIT"
default-run = "mt"
repository = "https://github.com/MythemeCloud/cargo.git"

[build]
target-dir = "Target"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
crossbeam = "0.8.2"
prql-compiler = "0.10.1"
rayon = "1.8.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[lib]
name = "mt"
path = "Source/Library/main.rs"

[[bin]]
name = "mt"
path = "Source/Binary/mt.rs"

[[bin]]
name = "mytheme"
path = "Source/Binary/mytheme.rs"
